# solana-practise-contract

./: .gitmodules  hacks-ideas.txt  notes.txt  notes2.txt
amm/: Cargo.toml
amm/program/: Cargo.toml
amm/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
amm/program/src/instructions/: add_liquidity.rs  create_pool.rs  mod.rs  remove_liquidity.rs
anchor-intro/: Anchor.toml
anchor-lottery/: Anchor.toml
anchor-nft/: Anchor.toml
anchor-swap/: Anchor.toml  package-lock.json  package.json
anchor-vesting/: Anchor.toml  package-lock.json  package.json
close-account/: Cargo.toml
cpi-double/: Cargo.toml
double/: Cargo.toml
escrow/: Cargo.toml
mollusk-counter/: Cargo.toml
mollusk-counter/tests/: Cargo.toml
mollusk-counter/tests/src/: main copy.rs  main.rs
multisig/: Cargo.toml
pda-transfer/: Cargo.toml
pinocchio-crud/: Cargo.toml
pinocchio-crud/sdk/: .solitarc.js  index.ts  package.json
pinocchio-crud/sdk/.crates/: .crates.toml  .crates2.json
pinocchio-crud/src/: lib.rs
pinocchio-crud/test2/: README.md  intex.test.ts  package.json
pinocchio-crud/tests/: package-lock.json  package.json  test.ts  userKeypair.json
pinocchio-crud/web/: package-lock.json  package.json  vite.config.ts
pinocchio-crud/web/src/: App.tsx  main.tsx
pinocchio-vs-std/: Cargo.toml
rust/: Cargo.toml
stake/: Cargo.toml
stake-mollusk-tests/: Cargo.toml
token-management/: Cargo.toml
token-management/client/: index.test.ts  package.json
token-management/src/: instruction.rs  lib.rs  processor.rs
token-management/src/instructions/: burn_tokens.rs  create_mint_ata.rs  create_mint_metadata.rs  freeze_ata.rs  init_mint.rs  mint_to_ata.rs  mod.rs  set_ata_authority.rs  set_mint_authority.rs  transfer_to_ata.rs  unfreeze_ata.rs
token22-extensions/: package-lock.json  package.json
vault1/: Cargo.toml
vault1/client/: index.test.ts
vault1/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
vault1/src/instructions/: deposit_to_vault.rs  init_vault.rs  withdraw_from_vault.rs
(+125 files in other folders)
