[package]
name = "vault1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib","lib"]

[dependencies]
borsh = {version="1.5.7", features = ["derive"]}
solana-program = "2.3.0"
spl-associated-token-account = {version="7.0.0", features=["no-entrypoint"]}
spl-token = {version="8.0.0",features=["no-entrypoint"]}
thiserror = "2.0.16"
