cargo-features=["edition2024"]
[package]
name = "program"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib","cdylib"]

[dependencies]
arrayref = "0.3.9"
borsh = {version="1.5.7" , features = ["derive"]}
solana-program = "2.3.0"
spl-associated-token-account = {version="7.0.0", features=["no-entrypoint"]}
spl-token = {version="8.0.0", features=["no-entrypoint"]}
thiserror = "2.0.16"
